Replace fixed height with gap in styles

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,7 +8,8 @@
 
 section
     display: grid
-    height: 200px
+    gap: 50px
+    // height: 200px
     width: 100%
     max-width: 500px
     position: relative
